[tool.poetry]
name = "JR4CE"
version = "1.0.0"
description = ""
authors = ["Yosuke Saito"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.1"
pandas = "^1.4.3"
torch = "^2.7.0"
torch-geometric = "^2.5.3"
tabulate = "^0.9.0"
networkx = "3.2.1"
psutil = "^6.1.1"
optuna = "^4.1.0"
optuna-dashboard = "^0.17.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "3.6.0"
notebook = "6.4.0"
traitlets = "5.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
